--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.20.2",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
+    "buffer-from": "^1.1.2",
     "gulp": "^4.0.2",
     "gulp-livereload": "^4.0.2",
     "gulp-rename": "^2.0.0",
